# sentiment-analysis

./: Dockerfile.mlflow  docker-compose.yml  pyproject.toml
notebooks/: exploration.ipynb
src/sentiment_analysis/: database.py  loader.py  preprocessing.py  train_baseline.py
