[project]
name = "sentiment-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "kagglehub>=1.0.0",
    "matplotlib>=3.8.0",
    "mlflow==2.9.2",
    "numpy>=1.24.0,<2.0.0",     
    "pandas>=2.0.0,<3.0.0",     
    "protobuf==4.25.3",
    "psycopg2-binary>=2.9.11",
    "scikit-learn>=1.4.0",
    "setuptools>=68.0.0",
    "sqlalchemy>=2.0.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
